
name:                tide
version:             0.1.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Yuras Shumovich
maintainer:          shumovichy@gmail.com
-- copyright:           
category:            Development
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable tide
  main-is:             ui.hs
  -- other-modules:       
  build-depends:       base
                       , text
                       , attoparsec
                       , vector
                       , fingertree
                       , gtk3
  hs-source-dirs:      ., src
  ghc-options:         -threaded
  default-language:    Haskell2010

test-suite spec
  type:                exitcode-stdio-1.0
  main-is:             spec.hs
  -- other-modules:
  build-depends:       base
                       , text
                       , attoparsec
                       , vector
                       , fingertree
                       , hspec
                       , QuickCheck
  hs-source-dirs:      ., spec, src
  default-language:    Haskell2010
